--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
 # princeabir061.github.io
+
+Body{
+
+Background-color: Red; 
+
+
+}
+
+Pre{
+  background-color: black;
+  Color: white;
+  
+ 
+ 
+
+}
