--- a/style.css
+++ b/style.css
@@ -1,17 +1,71 @@
 # princeabir061.github.io
 
-Body{
+*{
+    padding: 0;
+    margin: 0;
+    font-family: century;
+}
+body{
 
-Background-color: Red; 
+background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(image1.jpg.jpg);
+height: 100vh;
+background-size: cover;
+background-position: center;
+}
+
+ul{
+text-align: center;
+list-style-type: none;
+margin-top:15px;
+padding:23px;
+}
+
+ul li{
+
+    display:inline-block;
+    padding: 1px;
+}
+
+ul li a{
+
+text-decoration: none;
+color: white;
+padding: 5px 20px;
+border: 2px solid white;
+transition: 0.7s ease;
+font-family: lucida;
+}
+
+ul li a:hover{
+
+background-color: white;
+color: black;
 
 
 }
 
-Pre{
-  background-color: black;
-  Color: white;
-  
- 
- 
+ul li.active a{
 
+    background-color: white;
+    color: black;
+
+}
+
+img{
+
+height:345px;
+width:250px;
+padding-top:20px;
+margin-left:350px;
+
+}
+
+p{
+    text-align:center;
+    font-size: 25px;
+    margin-right:50px;
+font-family: cambria;
+    word-spacing: 1px;
+    letter-spacing:2px;
+    padding-top: 10px;
 }
