--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ ul li a{
 
 text-decoration: none;
 color: white;
-padding: 5px 20px;
-border: 2px solid white;
-transition: 0.7s ease;
+padding: 5px 10px;
+border: 2px solid WHITE;
+transition: 1.2s ease;
 font-family: lucida;
 }
 
@@ -68,4 +68,5 @@ font-family: cambria;
     word-spacing: 1px;
     letter-spacing:2px;
     padding-top: 10px;
+    color: white;
 }
