--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-# princeabir061.github.io
-
 *{
     padding: 0;
     margin: 0;
@@ -7,9 +5,8 @@
 }
 body{
 
-background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(image1.jpg.jpg);
-height: 100vh;
-background-size: cover;
+background:linear-gradient(135deg,rgb(74,13,143) 0%, rgba(250,42,143) 100%);
+height:100vh;
 background-position: center;
 }
 
@@ -30,15 +27,15 @@ ul li a{
 
 text-decoration: none;
 color: white;
-padding: 5px 10px;
-border: 2px solid WHITE;
+padding: 5px;
+border: 2px solid white;
 transition: 1.2s ease;
 font-family: lucida;
 }
 
 ul li a:hover{
 
-background-color: white;
+background-color:white;
 color: black;
 
 
@@ -63,8 +60,7 @@ margin-left:350px;
 p{
     text-align:center;
     font-size: 25px;
-    margin-right:50px;
-font-family: cambria;
+    margin-right:60px;
     word-spacing: 1px;
     letter-spacing:2px;
     padding-top: 10px;
